data/derived/comb/progs/unify/prog0717.ml.out
Characters 78-80:
  | Sine a -> sin (pi*eval (a, x, y))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
